--- a/src/styles/scss/production/base/_bs-section.scss
+++ b/src/styles/scss/production/base/_bs-section.scss
@@ -2,6 +2,9 @@
 .bs-section{
     padding: 8rem 0;
     position: relative;
+    @include mq-below($xs){
+        padding: 3rem 0;
+    }
 
     &.sec-last{
         padding-bottom: 20rem;
@@ -10,6 +13,11 @@
     .sec-title{
         @include font-source-sans(4.8rem,5.2rem, $font1, $font-smbold, $clr-base, uppercase);
         letter-spacing: 0.4rem;
+        @include mq-below($xs){
+            font-size: 2rem;
+            line-height: 2.4rem;
+            letter-spacing: 0.2rem;
+        }
 
         &.typ-lg{
             @include font-source-sans(8.4rem,8.8rem, $font1, $font-medium, $clr-base, uppercase);
@@ -19,6 +27,9 @@
 
     .sec-head{
         margin-bottom: 8rem;
+        @include mq-below($xs){
+            margin-bottom: 3rem;
+        }
     }
 
     &.typ-infography{
