--- a/src/styles/scss/production/config/_base-setup.scss
+++ b/src/styles/scss/production/config/_base-setup.scss
@@ -86,6 +86,11 @@ button {
     @include mq-above ($lg) {
         padding: 0 6rem;
     }
+    @include mq-below($xs){
+        max-width: initial;
+        width: 100%;
+        padding: 0 1.5rem;
+    }
 }
 
 .cm-paddtop-30{
@@ -143,6 +148,12 @@ button {
     }
 }
 
+.cm-visible-xs{
+    display: none !important;
+    @include mq-below($xs){
+        display: block !important;
+    }
+}
 
 
   
