--- a/src/styles/scss/production/base/_bs-tile.scss
+++ b/src/styles/scss/production/base/_bs-tile.scss
@@ -5,6 +5,11 @@
     overflow: hidden;
     transition: all 0.3s ease;
 
+    @include mq-below($xs){
+        height: 13rem;
+        width: 100%;
+    }
+
     &:before{
         content: '';
         position: absolute;
@@ -28,11 +33,20 @@
         left: 5rem;
         right: 5rem;
         bottom: 4rem;
+        @include mq-below($xs){
+            left: 1rem;
+            right: 1rem;
+            bottom: 1rem;
+        }
     }
 
     .title{
         @include font-source-sans(6rem,6.4rem, $font1, $font-bold, $clr-base, uppercase);
         font-style: italic;
+        @include mq-below($xs){
+            font-size: 2.4rem;
+            line-height: 2.8rem;
+        }
     }
 
     .link{
@@ -48,6 +62,9 @@
 
         .icon{
             font-size: 7rem;
+            @include mq-below($xs){
+                font-size: 3rem;
+            }
         }
 
     }
@@ -56,19 +73,37 @@
         margin-bottom: 2.5rem;
         margin-right: 2.5rem;
         // clip-path: polygon(5% 0, 100% 0%, 100% 100%, 5% 100%);
+        @include mq-below($xs){
+            margin-bottom: 0;
+            margin-right: 0;
+            clip-path: polygon(5% 0, 100% 0, 95% 100%, 0% 100%);
+        }
     }
     &.typ2{
         margin-bottom: 2.5rem;
+        @include mq-below($xs){
+            margin-bottom: 0;
+            clip-path: polygon(5% 0, 100% 0, 95% 100%, 0% 100%);
+        }
         // clip-path: polygon(0 0, 95% 0, 95% 100%, 0 100%);
     }
     &.typ3{
         clip-path: polygon(0 0, 100% 0%, 95% 100%, 0% 100%);
+        @include mq-below($xs){
+            clip-path: polygon(5% 0, 100% 0, 95% 100%, 0% 100%);
+        }
     }
     &.typ4{
         clip-path: polygon(5% 0, 100% 0%, 95% 100%, 0% 100%);
+        @include mq-below($xs){
+            clip-path: polygon(5% 0, 100% 0, 95% 100%, 0% 100%);
+        }
     }
     &.typ5{
         clip-path: polygon(5% 0, 100% 0%, 100% 100%, 0% 100%);
+        @include mq-below($xs){
+            clip-path: polygon(5% 0, 100% 0, 95% 100%, 0% 100%);
+        }
     }
 
     &:hover{
