--- a/src/styles/scss/production/layout/_lyt-franchise.scss
+++ b/src/styles/scss/production/layout/_lyt-franchise.scss
@@ -1,6 +1,10 @@
 .lyt-franchise {
   .wrapper-content {
     width: 65%;
+
+    @include mq-below($xs) {
+      width: 100%;
+    }
   }
 
   .sec-desc {
