--- a/src/styles/scss/production/layout/_lyt-icon-text.scss
+++ b/src/styles/scss/production/layout/_lyt-icon-text.scss
@@ -14,8 +14,16 @@
         align-items: flex-start;
         flex-flow: row wrap;
 
+        @include mq-below($xs){
+            flex-direction: column;
+        }
+
         .list-item{
             width: 33.33%;
+
+            @include mq-below($xs){
+                width: 100%;
+            }
         }
 
     }
