--- a/src/styles/scss/production/base/_bs-compare.scss
+++ b/src/styles/scss/production/base/_bs-compare.scss
@@ -2,15 +2,36 @@
   width: 80%;
   margin: 0 auto;
 
+  @include mq-below($xs){
+    width: 100%;
+  }
+
   .comapre-list-wrap {
     display: flex;
     align-items: flex-start;
     column-gap: 4%;
+
+    @include mq-below($xs) {
+      flex-direction: column;
+    }
+
     >.item {
       flex: 1;
       position: relative;
       align-self: stretch;
       padding-right: 5rem;
+
+      @include mq-below($xs) {
+        padding-right: 0;
+        margin-bottom: 2rem;
+      }
+
+      &:last-child {
+        @include mq-below($xs) {
+          margin-bottom: 0;
+        }
+      }
+
       &:after {
         content: '';
         position: absolute;
@@ -19,6 +40,10 @@
         right: 0;
         width: 0.1rem;
         background-color: $clr-primary;
+
+        @include mq-below($xs) {
+          content: none;
+        }
       }
       &:last-child {
         &:after {
@@ -32,6 +57,11 @@
       letter-spacing: 2.5px;
       opacity: 0.8;
       margin-bottom: 4rem;
+
+      @include mq-below($xs){
+        @include font-source-sans(1.4rem, normal);
+        margin-bottom: 1.5rem;
+      }
     }
   }
 
@@ -39,11 +69,25 @@
     .details-list {
       .item {
         margin-bottom: 2rem;
+
+        @include mq-below($xs){
+          margin-bottom: 1rem;
+        }
+
         p {
           font-size: 1.8rem;
           line-height: 1.33;
+
+          @include mq-below($xs){
+            font-size: 1rem;
+          }
+
           &:before {
             top: 0.8rem;
+
+            @include mq-below($xs){
+              top: 0.4rem;
+            } 
           }
         }
       }
@@ -54,6 +98,11 @@
         font-size: 1.8rem;
         font-style: italic;
         padding: 0.75rem 0;
+
+        @include mq-below($xs){
+          font-size: 1rem;
+          padding: 0.3rem 0;
+        }
       }
     }
   }
