--- a/src/styles/scss/production/base/_bs-features.scss
+++ b/src/styles/scss/production/base/_bs-features.scss
@@ -4,8 +4,16 @@
   justify-content: space-between;
   column-gap: 5%;
 
+  @include mq-below($xs) {
+    flex-direction: column;
+  }
+
   .info-wrap {
     width: 50%;
+
+    @include mq-below($xs) {
+     width: 100%
+    }
   }
 
   .title {
@@ -14,15 +22,30 @@
     letter-spacing: 3.6px;
     opacity: 0.8;
     margin-bottom: 2.4rem;
+
+    @include mq-below($xs) {
+      @include font-source-sans(1.6rem);
+      margin-bottom: 1.2rem;
+      letter-spacing: 1.6px;
+    } 
   }
 
   .desc {
     @include font-source-sans(2rem, normal, $font1, $font-regular, $clr-primary, initial);
     font-style: italic;
     margin-bottom: 6rem;
+
+    @include mq-below($xs) {
+      @include font-source-sans(1rem);
+      margin-bottom: 2.5rem;
+    } 
   }
 
   .mod-video {
     width: 50%;
+
+    @include mq-below($xs) {
+     width: 100%;
+    }
   }
 }
