--- a/src/styles/scss/production/base/_bs-infography.scss
+++ b/src/styles/scss/production/base/_bs-infography.scss
@@ -21,7 +21,11 @@
         letter-spacing: 0.4rem;
         margin-bottom: 8rem;
 
-        
+        @include mq-below($xs){
+            @include font-source-sans(2.4rem, 3rem);
+            margin-bottom: 2.5rem
+        }
+
         .text-sm{
             @include font-source-sans(3.2rem,3.6rem, $font1, $font-medium, $clr-base, uppercase);
             display: block;
@@ -63,11 +67,20 @@
     .desc{
         margin-bottom: 6rem;
 
+        @include mq-below($xs){
+            margin-bottom: 0;
+        }
+
         p{
             @include font-source-sans(2.4rem,3.2rem, $font2, $font-regular, $clr-base, initial);
             margin-bottom: 3rem;
+
             &:last-child{
                 margin-bottom: 0;
+            }
+
+            @include mq-below($xs) {
+               @include font-source-sans(1.4rem, 2rem); 
             }
         }
 
@@ -153,10 +166,20 @@
     &.typ-icon{
         justify-content: space-around;
         align-items: center;
+
+        @include mq-below($xs){
+            flex-direction: column;
+        }
+
         .info-wrap{
             width: 68rem;
             max-width: initial;
             margin-left: 5rem;
+
+            @include mq-below($xs){
+                width: 100%;
+                margin-left: 0;
+            }
         }
         .img-wrap{
             max-width: 110rem;
@@ -241,6 +264,9 @@
     &.typ-about{
         justify-content: space-between;
         align-items: center;
+        @include mq-below ($xs) {
+            flex-direction: column;
+        }
 
         .img-wrap{
             img{
@@ -342,10 +368,21 @@
 
     &.typ-clarity-futureof {
         position: relative;
+
+        @include mq-below($xs) {
+            flex-direction: column;
+        }
+
         .info-wrap {
             position: absolute;
             max-width: 90rem;
-            padding-left: 10rem
+            padding-left: 10rem;
+
+            @include mq-below($xs) {
+               position: unset;
+               padding-left: 0;
+               max-width: 100%;
+            }
         }
 
         .img-wrap {
@@ -359,6 +396,13 @@
         .title{
             font-style: italic;
             margin-bottom: 5rem;
+
+            @include mq-below($xs){
+                font-size: 1.6rem;
+                line-height: 1.5rem;
+                margin-bottom: 2rem;
+            }
+
         }
 
         .desc {
