--- a/src/styles/scss/production/base/_bs-modal.scss
+++ b/src/styles/scss/production/base/_bs-modal.scss
@@ -6,10 +6,18 @@
     transform: translate(-50%, -50%);
     background-color: $clr-base;
     width: 60%;
+
+    @include mq-below($xs) {
+      width: 95%;
+    }
   }
 
   .yt-iframe {
     width: 100%;
-    height: 500px;
+    height: 50rem;
+
+    @include mq-below($xs) {
+     height: 20rem;
+    }
   }
 }
