--- a/src/styles/scss/production/base/_bs-section.scss
+++ b/src/styles/scss/production/base/_bs-section.scss
@@ -17,14 +17,18 @@
         @include font-source-sans(4.8rem,5.2rem, $font1, $font-smbold, $clr-base, uppercase);
         letter-spacing: 0.4rem;
         @include mq-below($xs){
-            font-size: 2rem;
-            line-height: 2.4rem;
+            font-size: 1.6rem;
+            line-height: 2.2rem;
             letter-spacing: 0.2rem;
         }
 
         &.typ-lg{
             @include font-source-sans(8.4rem,8.8rem, $font1, $font-medium, $clr-base, uppercase);
             letter-spacing: 1.6rem;
+
+            @include mq-below($xs){
+                @include font-source-sans(3.2rem, 4rem);
+            }
         }
     }
 
@@ -42,6 +46,7 @@
                 position: absolute;
                 right: 0;
                 @include mq-below($xs){
+                    margin-top: 3rem;
                     position: relative;
                     right: -1.5rem;
                 }
