--- a/src/styles/scss/production/base/_bs-videoplayer.scss
+++ b/src/styles/scss/production/base/_bs-videoplayer.scss
@@ -5,6 +5,11 @@
     position: relative;
     >div {
       min-height: 52.8rem;
+
+      @include mq-below($xs) {
+        min-height: auto;
+        height: auto !important;
+      }
     }
 
     .action-btn {
@@ -16,6 +21,10 @@
       .icon {
         font-size: 9rem;
         color: $clr-primary;
+
+        @include mq-below($xs) {
+          font-size: 3rem;
+        }
       }
     }
   }
@@ -28,6 +37,10 @@
     z-index: 1;
     transition: all 0.3s ease;
     transform: translateY(150%);
+
+    @include mq-below($xs){
+      position: unset;
+    }
   }
 
   .play-controls-wrap {
@@ -41,6 +54,16 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @include mq-below($xs) {
+      justify-content: flex-start;
+    }
+
+    .video_time {
+      @include mq-below($xs) {
+        margin-left: 0.4rem;
+      }
+    }
   }
 
   &:hover{
