--- a/src/styles/scss/production/layout/_lyt-info.scss
+++ b/src/styles/scss/production/layout/_lyt-info.scss
@@ -1,9 +1,12 @@
 //lyt-info
 .lyt-info{
-
     .info-item{
-        
         margin-bottom: 6rem;
+
+        @include mq-below($xs) {
+            margin-bottom: 3rem;
+        }
+
         &:last-child{
             margin-bottom: 0;
         }
