--- a/src/styles/scss/production/layout/_lyt-single-page.scss
+++ b/src/styles/scss/production/layout/_lyt-single-page.scss
@@ -4,21 +4,38 @@
     .sp-title{
         @include font-source-sans(7.2rem,7.8rem, $font1, $font-medium, $clr-base, uppercase);
         letter-spacing: 1.4rem;
+
+        @include mq-below($xs) {
+            @include font-source-sans(2.5rem, 3rem);
+            letter-spacing: normal;
+        }
     }
 
     .sp-head{
         margin-bottom: 17.2rem;
         text-align: center;
+        @include mq-below($xs) {
+            margin-bottom: 2rem;
+            padding: 0 1.5rem;
+        }
     }
 
     .sp-desc{
         max-width: 92.4rem;
         text-align: left;
         margin: 8rem auto 0;
+        @include mq-below($xs) {
+            margin: 4rem auto 0;
+        }
         
         p{
             @include font-source-sans(2.4rem,3.2rem, $font2, $font-regular, $clr-base, initial);
             margin-bottom: 3rem;
+
+            @include mq-below($xs) {
+                @include font-source-sans(1.4rem, 2rem);
+            }
+
             &:last-child{
                 margin-bottom: 0;
             }
