--- a/src/styles/scss/production/module/_mod-benefits.scss
+++ b/src/styles/scss/production/module/_mod-benefits.scss
@@ -5,14 +5,27 @@
     margin: 0 auto;
     align-items: flex-start;
 
+    @include mq-below($xs){
+        flex-direction: column;
+    }
+
     .list-wrap{
         padding: 0 6rem;
         width: 33.33%;
+
+        @include mq-below($xs) {
+            padding: 0 3rem;
+            width: 100%;
+        }
     }
 
     .text{
         @include font-source-sans(3.2rem,3.6rem, $font2, $font-bold, $clr-base, uppercase);
         font-style: italic;
+
+        @include mq-below($xs) {
+            @include font-source-sans(1.6rem, 1.8rem);
+        }
 
         .light{
             font-weight: $font-light;
@@ -40,6 +53,11 @@
 
         .list-wrap {
             padding: 0 6rem 0 2rem;
+
+            @include mq-below($xs) {
+                padding: 0 0 0 1rem;
+                margin-bottom: 2rem;
+            }
         }
     }
 
