--- a/src/styles/scss/production/module/_mod-list.scss
+++ b/src/styles/scss/production/module/_mod-list.scss
@@ -4,8 +4,17 @@
     .details-list {
         .item {
             margin-bottom: 4rem;
+
+            @include mq-below($xs) {
+                margin-bottom: 1rem;
+            }
+
             &:last-child {
                 margin-bottom: 0;
+
+                @include mq-below($xs) {
+                    margin-bottom: 1rem;
+                }
             }
 
             p {
@@ -13,6 +22,11 @@
                 font-weight: $font-smbold;
                 padding-left: 1rem;
                 position: relative;
+
+                @include mq-below($xs) {
+                    font-weight: $font-medium;
+                }
+                
                 &:before {
                     content:'';
                     width: 0.6rem;
@@ -22,6 +36,12 @@
                     position: absolute;
                     top: 1.2rem;
                     left: 0;
+
+                    @include mq-below($xs) {
+                        width: 0.3rem;
+                        height: 0.3rem;
+                        top: 0.5rem;
+                    } 
                 }
             }
         }
@@ -32,6 +52,11 @@
             @include font-source-sans(2.4rem, 1.33, $font1, $font-light, $clr-base, initial);
             opacity: 0.8;
             padding: 1rem 0;
+
+            @include mq-below($xs) {
+                @include font-source-sans(1.2rem);
+                padding: 0.5rem 0 ;
+            } 
         }
     }
 
@@ -43,30 +68,58 @@
         width: 146rem;
         margin: 0 auto;
 
+        @include mq-below($xs) {
+            flex-direction: column;
+        }
+
         .list-item{
             width: 50%;
             counter-increment: section;
             padding-left: 5rem;
             position: relative;
             margin-bottom: 10rem;
+
+            @include mq-below($xs) {
+               width: 100%;
+               padding-left: 2rem;
+               margin-bottom: 2rem;
+            }
+
             &:before{
                 content: counter(section) ". ";
                 @include font-source-sans(3.6rem,3.8rem, $font1, $font-smbold, $clr-primary, uppercase);
                 position: absolute;
                 left: 0;
+
+                @include mq-below($xs) {
+                    @include font-source-sans(1.8rem, 1.9rem);
+                }
             }
             >p{
                 @include font-source-sans(3.6rem,3.8rem, $font1, $font-smbold, $clr-primary, uppercase);
                 letter-spacing: 0.03rem;
                 margin-bottom: 4rem;
+
+                @include mq-below($xs) {
+                    @include font-source-sans(1.4rem, 1.5rem);
+                    margin-bottom: 1.5rem;
+                }
             }
         }
 
         .mod-list{
             &.typ-disc{
                 margin-left: -2.8rem;
+
+                @include mq-below($xs){
+                    margin-left: 0;
+                }
+
                 .item{
                     max-width: 58rem;
+                    @include mq-below($xs){
+                        max-width: 100%;
+                    }
                 }
             }
         }
@@ -78,11 +131,19 @@
         .item{
             list-style-type: disc;
             margin-bottom: 4rem;
+
+            @include mq-below($xs){
+                margin-bottom: 1.5rem;
+            }
+
             &:last-child{
                 margin-bottom: 0;
             }
             >p{
                 @include font-source-sans(2.4rem,3.2rem, $font1, $font-light, $clr-base, initial);
+                @include mq-below($xs){
+                    @include font-source-sans(1.2rem, 1.6rem);
+                }
             }
         }
 
@@ -155,6 +216,12 @@
             position: relative;
             margin-bottom: 4rem;
             padding-left: 5rem;
+
+            @include mq-below($xs){
+                margin-bottom: 2rem;
+                padding-left: 2rem;
+            }
+
             &:last-child{
                 margin-bottom: 0;
             }
@@ -167,11 +234,21 @@
                 top: 50%;
                 left: 0;
                 transform: translateY(-50%);
+
+                @include mq-below($xs) {
+                    font-size: 1.5rem;
+                    top: 0;
+                    transform: none;
+                }
             }
             >p{
                 @include font-source-sans(2.4rem,3.2rem, $font1, $font-smbold, $clr-base, initial);
                 opacity: 0.8;
                 font-style: italic;
+
+                @include mq-below($xs) {
+                    @include font-source-sans(1.2rem, 1.6rem);
+                }
             }
         }
     }
