--- a/src/styles/scss/production/module/_mod-logo-list.scss
+++ b/src/styles/scss/production/module/_mod-logo-list.scss
@@ -2,4 +2,23 @@
   display: flex;
   align-items: flex-start;
   column-gap: 15%;
+
+  .logo-item {
+    @include mq-below($xs) {
+      margin-bottom: 2rem;
+    }
+
+    &:last-child {
+      @include mq-below($xs) {
+        margin-bottom: 0;
+      }
+    }
+    
+    .m-logo {
+      @include mq-below($xs) {
+        width: 60%;
+        margin: 0 auto;
+      }
+    }
+  }
 }
