--- a/src/styles/scss/production/module/_mod-team.scss
+++ b/src/styles/scss/production/module/_mod-team.scss
@@ -8,6 +8,12 @@
         border-radius: 100%;
         overflow: hidden;
         margin: 0 auto 4rem;
+        
+        @include mq-below($xs) {
+            width: 16rem;
+            height: 16rem;
+            margin: 0 auto 2rem;
+        }
     }
 
     .info-wrap{
@@ -17,10 +23,19 @@
     .title{
         @include font-source-sans(3.2rem,3.8rem, $font1, $font-medium, $clr-base, capitalize);
         margin-bottom: 1.3rem;
+
+        @include mq-below($xs) {
+            @include font-source-sans(1.6rem, 1.9rem);
+            margin-bottom: 1.3rem;
+        }
     }
 
     .designation{
         @include font-source-sans(2.4rem,3.2rem, $font1, $font-light, $clr-base, capitalize);
+
+        @include mq-below($xs) {
+            @include font-source-sans(1.4rem, 1.6rem);
+        }
     }
 
 }
