--- a/src/styles/scss/production/module/_mod-warranty.scss
+++ b/src/styles/scss/production/module/_mod-warranty.scss
@@ -6,6 +6,11 @@
     .count{
         @include font-source-sans(9.2rem,11rem, $font2, $font-smbold, $clr-primary, uppercase);
         margin-right: 2rem;
+
+        @include mq-below($xs) {
+            @include font-source-sans(4.5rem, 5rem);
+            margin-right: 1rem;
+        }
     }
 
     .text{
@@ -13,6 +18,11 @@
         padding: 1rem;
         border-top: 1px solid $clr-primary;
         border-bottom: 1px solid $clr-primary;
+
+        @include mq-below($xs) {
+            @include font-source-sans(1.4rem, 1.7rem);
+            padding: 0.7rem;
+        }
     }
 
     &.typ-detailing-services {
