video and gif image is uploaded

--- a/src/styles/scss/production/base/_bs-menu.scss
+++ b/src/styles/scss/production/base/_bs-menu.scss
@@ -69,6 +69,7 @@
         padding: 1rem;
         width: 3rem;
         height: 3rem;
+        z-index: 10;
         @include mq-below($xs){
             top: 0;
             right: 0.5rem;
