--- a/src/styles/scss/production/base/_bs-service.scss
+++ b/src/styles/scss/production/base/_bs-service.scss
@@ -4,7 +4,10 @@
     align-items: center;
     position: relative;
 
-
+    @include mq-below($xs) {
+        flex-direction: column;
+    }
+    
     .title{
         @include font-source-sans(8rem,8.4rem, $font1, $font-bold, $clr-base, uppercase);
         margin-bottom: 8rem;
