--- a/src/styles/scss/production/layout/_lyt-tile-grid.scss
+++ b/src/styles/scss/production/layout/_lyt-tile-grid.scss
@@ -4,6 +4,10 @@
       .title {
         @include font-source-sans(3.6rem, normal);
         width: 20%;
+
+        @include mq-below($xs){
+          @include font-source-sans(1.6rem);
+        }
       }
     }
   }
