--- a/src/styles/scss/production/base/_bs-band.scss
+++ b/src/styles/scss/production/base/_bs-band.scss
@@ -62,6 +62,11 @@
                 color: $clr-base;
                 font-size: 15.9rem;
                 line-height: 22rem;
+
+                @include mq-below($xs) {
+                    font-size: 3rem;
+                    line-height: normal;
+                }
             }
             .text{
                 color: $clr-base;
@@ -69,6 +74,12 @@
                 font-size: 4.9rem;
                 line-height: 5.9rem;
                 padding: 1.5rem;
+
+                @include mq-below($xs) {
+                    font-size: 1.6rem;
+                    line-height: normal;
+                    padding: 1.2rem;
+                }
             }
         }
 
