--- a/src/styles/scss/production/base/_bs-list.scss
+++ b/src/styles/scss/production/base/_bs-list.scss
@@ -3,6 +3,13 @@
     position: relative;
     padding-left: 25rem;
 
+    @include mq-below($xs) {
+        padding-left: 0;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
     &:before{
         content: '';
         left: 0;
@@ -12,6 +19,10 @@
         background-size: contain;
         position: absolute; 
         width: 58%;
+
+        @include mq-below($xs) {
+            left: -4rem;
+        }
     }
 
     .title{
@@ -19,32 +30,78 @@
         font-style: italic;
         margin-bottom: 0;
         margin-left: 11rem;
+
+        @include mq-below($xs){
+            @include font-source-sans(1.4rem, normal);  
+            margin-bottom: 2rem;
+            margin-left: 9rem;
+        } 
     }
 
     .item{
         @include font-source-sans(2.1rem,2.4rem, $font2, $font-smbold, $clr-base, uppercase);
         font-style: italic;
         margin-bottom: 3rem;
+
+        @include mq-below($xs) {
+            @include font-source-sans(1.2rem, normal);
+            margin-bottom: 1rem;
+        }
+
         &:last-child{
             margin-bottom: 0;
+
+            @include mq-below($xs) {
+                margin-left: 6rem;
+            }
         }
+        
         &:nth-last-child(2){
             margin-left: 1.5rem;
+
+            @include mq-below($xs) {
+                margin-left: 6.5rem;
+            }
         }
+
         &:nth-last-child(3){
             margin-left: 3rem;
+
+            @include mq-below($xs) {
+                margin-left: 7rem;
+            }
         }
+
         &:nth-last-child(4){
             margin-left: 4.5rem;
+
+            @include mq-below($xs) {
+                margin-left: 7.5rem;
+            }
         }
+
         &:nth-last-child(5){
             margin-left: 6rem;
+
+            @include mq-below($xs) {
+                margin-left: 8rem;
+            }
         }
+
         &:nth-last-child(6){
             margin-left: 7.5rem;
+
+            @include mq-below($xs) {
+                margin-left: 8.5rem;
+            }
         }
+
         &:nth-last-child(7){
             margin-left: 9rem;
+
+            @include mq-below($xs) {
+                margin-left: 9rem;
+            }
         }
 
 
