--- a/src/styles/scss/production/layout/_lyt-service.scss
+++ b/src/styles/scss/production/layout/_lyt-service.scss
@@ -1,9 +1,17 @@
 //lyt-service
 .lyt-service{
     .list-item{
+        @include mq-below($xs) {
+            margin-bottom: 2rem;
+        }
+
         &:nth-child(even){
             .bs-service{
                 flex-direction: row-reverse;
+
+                @include mq-below($xs){
+                    flex-direction: column;
+                }
 
                 .water-mark{
                     color: $clr-secondary;
@@ -34,6 +42,11 @@
                 .water-mark{
                     top: -9rem;
                     left: -22rem;
+
+                    @include mq-below($xs) {
+                        top: -16rem;
+                        left: 0;
+                    }
                 }
             }
         }
@@ -42,6 +55,11 @@
                 .water-mark{
                     top: -9rem;
                     left: -10rem;
+
+                    @include mq-below($xs) {
+                        top: -16rem;
+                        left: 0;
+                    }
                 }
             }
         }
@@ -51,6 +69,10 @@
                     top: -9rem;
                     left: auto;
                     right: 7rem;
+
+                    @include mq-below($xs){
+                        top: -16rem;
+                    }
                 }
             }
         }
@@ -59,9 +81,18 @@
                 .water-mark{
                     top: -9rem;
                     left: -10rem;
+
+                    @include mq-below($xs){
+                        top: -16rem;
+                        left: 0;
+                    }
                 }
                 .info-wrap{
                     margin-left: 19rem;
+
+                    @include mq-below($xs){
+                        margin-left: 0;
+                    }
                 }
             }
         }
@@ -71,6 +102,12 @@
                     top: -9rem;
                     left: auto;
                     right: -8rem;
+
+                    @include mq-below($xs){
+                        top: -16rem;
+                        left: 0;
+                        right:0;
+                    }
                 }
             }
         }
