--- a/src/styles/scss/production/module/_mod-video.scss
+++ b/src/styles/scss/production/module/_mod-video.scss
@@ -23,12 +23,20 @@
     .title-wrap {
       text-align: center;
       margin-bottom: 8rem;
+
+      @include mq-below($xs) {
+        margin-bottom: 2rem;
+      }
     }
 
     .title {
       @include font-source-sans(7.2rem, normal, $font1, $font-bold, $clr-primary, uppercase);
       font-style: italic;
       opacity: 0.8;
+
+      @include mq-below($xs) {
+        @include font-source-sans(1.4rem);
+      }
 
       &.typ-white {
         color: $clr-base;
@@ -53,6 +61,10 @@
       p {
         @include font-source-sans(3.2rem, normal, $font1, $font-medium, $clr-base, initial);
         margin-bottom: 4rem;
+
+        @include mq-below($xs) {
+          @include font-source-sans(1.6rem);
+        }
       }
     }
   }
