--- a/src/styles/scss/production/layout/_lyt-icon-text.scss
+++ b/src/styles/scss/production/layout/_lyt-icon-text.scss
@@ -14,15 +14,17 @@
         align-items: flex-start;
         flex-flow: row wrap;
 
-        @include mq-below($xs){
-            flex-direction: column;
-        }
+        // @include mq-below($xs){
+        //     flex-direction: column;
+        // }
 
         .list-item{
             width: 33.33%;
 
             @include mq-below($xs){
-                width: 100%;
+                width: 50%;
+                margin-bottom: 1.5rem;
+                padding: 0 1.5rem;
             }
         }
 
