--- a/src/assets/css/icons.css
+++ b/src/assets/css/icons.css
@@ -31,6 +31,9 @@
 .icon-download:before {
   content: "\e918";
 }
+.icon-contact:before {
+  content: "\e91d";
+}
 .icon-chat:before {
   content: "\e919";
 }
