--- a/src/styles/scss/production/base/_bs-infography.scss
+++ b/src/styles/scss/production/base/_bs-infography.scss
@@ -23,7 +23,8 @@
 
         @include mq-below($xs){
             @include font-source-sans(2.4rem, 3rem);
-            margin-bottom: 2.5rem
+            // margin-bottom: 2.5rem
+            margin-bottom: 0;
         }
 
         .text-sm{
@@ -193,12 +194,21 @@
             .img-wrap{
                 max-width: 100rem;
                 margin-left: -7%;
+                @include mq-below($xs){
+                    max-width: initial;
+                    width: 100%;
+                    margin-left: 0;
+                    margin-top: 2rem;
+                }
                 img{
                     width: 100%;
                 }
             }
             .info-wrap{
                 width: 80rem;
+                @include mq-below($xs){
+                    width: 100%;
+                }
             }
         }
     }
