--- a/src/styles/scss/production/module/_mod-info.scss
+++ b/src/styles/scss/production/module/_mod-info.scss
@@ -8,6 +8,7 @@
 
     @include mq-below($xs) {
         flex-direction: column;
+        padding: 2rem 0;
     }
     
 
@@ -38,6 +39,7 @@
             @include font-source-sans(1.8rem, 1.9rem);
             letter-spacing: 0.1rem;
             margin-bottom: 1rem;
+            text-align: center;
         }
     }
 
@@ -53,6 +55,27 @@
     }
 
     &.typ-bg{
+        position: relative;
+        
+        &:before{
+            content: '';
+            position: absolute;
+            z-index: 1;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            transition: all 0.5s ease;
+            max-width: 75%;
+            background: rgba(255,255,255,0);
+            background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.47) 51%, rgba(255,255,255,0) 100%);
+            background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,255,255,0)), color-stop(51%, rgba(32,123,192,0.47)), color-stop(100%, rgba(255,255,255,0)));
+            background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.47) 51%, rgba(255,255,255,0) 100%);
+            background: -o-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.47) 51%, rgba(255,255,255,0) 100%);
+            background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.47) 51%, rgba(255,255,255,0) 100%);
+            background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(32,123,192,0.47) 51%, rgba(255,255,255,0) 100%);
+            filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1 )";
+        }
         .info-wrap{
             display: flex;
             align-items: center;
@@ -64,29 +87,28 @@
             @include mq-below($xs) {
                 flex-direction: column;
                 width: 100%;
-                padding: 2.4rem 0;
-            }
-
-            &:before{
-                content: '';
-                position: absolute;
-                z-index: 1;
-                left: 0;
-                right: 0;
-                top: 0;
-                bottom: 0;
-                background: rgba(255,255,255,0);
-                background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.47) 51%, rgba(255,255,255,0) 100%);
-                background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,255,255,0)), color-stop(51%, rgba(32,123,192,0.47)), color-stop(100%, rgba(255,255,255,0)));
-                background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.47) 51%, rgba(255,255,255,0) 100%);
-                background: -o-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.47) 51%, rgba(255,255,255,0) 100%);
-                background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.47) 51%, rgba(255,255,255,0) 100%);
-                background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(32,123,192,0.47) 51%, rgba(255,255,255,0) 100%);
-                filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1 )";
+                padding: 0;
+                text-align: center;
             }
             .title,.sub-title{
                 position: relative;
                 z-index: 1;
+            }
+        }
+
+        &:hover{
+            cursor: pointer;
+            &:before{
+                background: rgba(255,255,255,0);
+                background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.87) 51%, rgba(255,255,255,0) 100%);
+                background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,255,255,0)), color-stop(51%, rgba(32,123,192,0.87)), color-stop(100%, rgba(255,255,255,0)));
+                background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.87) 51%, rgba(255,255,255,0) 100%);
+                background: -o-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.87) 51%, rgba(255,255,255,0) 100%);
+                background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.87) 51%, rgba(255,255,255,0) 100%);
+                background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(32,123,192,0.87) 51%, rgba(255,255,255,0) 100%);
+                filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1 )";
+                max-width: initial;
+                width: 100%;
             }
         }
     }
