--- a/src/styles/scss/production/module/_mod-logo-list.scss
+++ b/src/styles/scss/production/module/_mod-logo-list.scss
@@ -4,12 +4,14 @@
   column-gap: 15%;
 
   @include mq-below($xs) {
-    flex-direction: column;
+    align-items: center;
+    margin-top: 3rem;
   }
 
   .logo-item {
     @include mq-below($xs) {
-      margin-bottom: 2rem;
+      margin-bottom: 0;
+      width: 50%;
     }
 
     &:last-child {
@@ -20,7 +22,7 @@
 
     .m-logo {
       @include mq-below($xs) {
-        width: 60%;
+        width: 100%;
         margin: 0 auto;
       }
     }
