--- a/src/styles/scss/production/module/_mod-info.scss
+++ b/src/styles/scss/production/module/_mod-info.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
     max-width: 160rem;
     margin: 0 auto;
+    position: relative;
 
     @include mq-below($xs) {
         flex-direction: column;
@@ -16,6 +17,37 @@
         max-width: 140rem;
         margin: 0 auto;
         padding: 4.8rem 5.5rem;
+        transition: all 0.3s ease;
+        
+
+        &:before{
+            content: '';
+            position: absolute;
+            z-index: 1;
+            left: 0;
+            right: 0;
+            top: 4rem;
+            bottom: 4rem;
+            transition: all 0.3s ease;
+            background: rgba(255,255,255,0);
+            background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.47) 51%, rgba(255,255,255,0) 100%);
+            background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,255,255,0)), color-stop(51%, rgba(32,123,192,0.47)), color-stop(100%, rgba(255,255,255,0)));
+            background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.47) 51%, rgba(255,255,255,0) 100%);
+            background: -o-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.47) 51%, rgba(255,255,255,0) 100%);
+            background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.47) 51%, rgba(255,255,255,0) 100%);
+            background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(32,123,192,0.47) 51%, rgba(255,255,255,0) 100%);
+            filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1 )";
+            width: 0;
+            opacity: 0;
+            margin: 0 auto;
+        }
+
+        &:hover{
+            &:before{
+                width: 100%;
+                opacity: 1;
+            }
+        }
 
         @include mq-below($xs) {
             max-width: 100%;
@@ -97,7 +129,6 @@
         }
 
         &:hover{
-            cursor: pointer;
             &:before{
                 background: rgba(255,255,255,0);
                 background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(32,123,192,0.87) 51%, rgba(255,255,255,0) 100%);
