ppf page addingtion on page done

--- a/src/styles/scss/production/module/_mod-video.scss
+++ b/src/styles/scss/production/module/_mod-video.scss
@@ -28,6 +28,14 @@
         margin-bottom: 2rem;
         padding: 0 1rem;
       }
+
+      &.fixed-width{
+        max-width: 120rem;
+        margin: 0 auto;
+        @include mq-below($xs){
+          max-width: initial;
+        }
+      }
     }
 
     .title {
